force-app/main/default/objects/Workshop_Config_Steps__c/Workshop_Config_Steps__c.object-meta.xml
<CustomObject>
    <label>Workshop Config Step</label>
    <nameField>
        <displayFormat>TDX-{00000}</displayFormat>
        <label>Workshop Config Steps Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workshop Config Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>