force-app/main/default/objects/Workshop_Config_Steps__c/fields/Config_Type__c.field-meta.xml
<CustomField>
    <fullName>Config_Type__c</fullName>
    <label>Config Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added Page Layout</fullName>
            </value>
            <value>
                <fullName>Apex Added</fullName>
            </value>
            <value>
                <fullName>Configuration setting modification</fullName>
            </value>
            <value>
                <fullName>Feature Enablement</fullName>
            </value>
            <value>
                <fullName>Field Added</fullName>
            </value>
            <value>
                <fullName>Flow Added</fullName>
            </value>
            <value>
                <fullName>LWC added</fullName>
            </value>
            <value>
                <fullName>Modified Page Layout</fullName>
            </value>
            <value>
                <fullName>Modify Apex</fullName>
            </value>
            <value>
                <fullName>Modify Flow</fullName>
            </value>
            <value>
                <fullName>Modify LWC</fullName>
            </value>
            <value>
                <fullName>Modify Object</fullName>
            </value>
            <value>
                <fullName>Modify Permission set</fullName>
            </value>
            <value>
                <fullName>Modify profile</fullName>
            </value>
            <value>
                <fullName>Modify prompts</fullName>
            </value>
            <value>
                <fullName>Modify Record Type</fullName>
            </value>
            <value>
                <fullName>Object Added</fullName>
            </value>
            <value>
                <fullName>Permission set added</fullName>
            </value>
            <value>
                <fullName>Profile Added</fullName>
            </value>
            <value>
                <fullName>Prompt Added</fullName>
            </value>
            <value>
                <fullName>RecordType Added</fullName>
            </value>
            <value>
                <fullName>External Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>