force-app/main/default/objects/Workshop_Config_Steps__c/fields/Describe_Action__c.field-meta.xml
<CustomField>
    <fullName>Describe_Action__c</fullName>
    <label>Describe Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>