force-app/main/default/objects/Workshop_Config_Steps__c/fields/Name_value__c.field-meta.xml
<CustomField>
    <fullName>Name_value__c</fullName>
    <label>Name / value</label>
    <type>TextArea</type>
</CustomField>