force-app/main/default/objects/Workshop_Config_Steps__c/fields/Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ID__c</fullName>
    <defaultValue>&apos;Not Applicable&apos;</defaultValue>
    <label>Salesforce ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>