force-app/main/default/objects/Workshop_Config_Steps__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Describe_Action__c</columns>
    <columns>Name_value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>