force-app/main/default/objects/Workshop_Config_Steps__c/listViews/Module_2_Changes.listView-meta.xml
<ListView>
    <fullName>Module_2_Changes</fullName>
    <columns>NAME</columns>
    <columns>Config_Type__c</columns>
    <columns>Describe_Action__c</columns>
    <columns>Name_value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Ankit Sanghvi</value>
    </filters>
    <label>Module 2 Changes</label>
</ListView>